# cggrt

./: CMakeLists.txt  README.txt
include/cggrt/: fwd-nodes-special.h  fwd.h  graph.h  node-op-const.h  node.h  ops.h  shape.h  tensor.h  types.h
src/: CMakeLists.txt  gen_helper_nodes_fdyn.c  graph.c  node-op-const.c  node.c  ops.c  tensor.c
